# dynafx

./: .gitignore  CMakeLists.txt  EffectControl.qml  EffectSlider.qml  README.md  SoundLooper.hpp  dynafx.sln  main.cpp  main.qml  resources.qrc
.github/workflows/: build.yml
app/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.csproj  app.manifest
app/Effect/: BaseEffect.cs  EchoEffect.cs
app/Sound/: SoundLooper.cs
app/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
app/Views/: MainWindow.axaml  MainWindow.axaml.cs
